:bulb: docs: add swagger configuration
